# karoshi-client

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  install.sh  subst.mk
applications/firefox/lib/post-session/: 30firefox
applications/firefox/lib/pre-session/: 70firefox
applications/firefox/lib/update/: 20firefox
applications/thunderbird/lib/update/: 21thunderbird
configuration/etc/init/: console.conf  kdm.conf  lightdm.conf  sssd.conf  tty1.conf  tty2.conf  tty3.conf  tty4.conf  tty5.conf  tty6.conf
configuration/etc/kde4/kdm/: kdmrc
configuration/etc/lightdm/: lightdm-kde-greeter.conf
configuration/etc/xdg/menus/: xfce-applications.menu
configuration/usr/share/kde4/apps/kdm/themes/karoshi/: karoshi.xml
configuration/usr/share/kde4/apps/lightdm-kde-greeter/themes/karoshi-classic/: main.qml
core/desktop/: manage-flags.desktop
core/lib/: common  session-tools
core/lib/pam/: post-session  pre-session
core/lib/post-session/: 00core  02configuration_pre  50configuration
core/lib/pre-session/: 00core  50configuration
core/lib/services/: multicast-listener  update
core/lib/update/: 00core
cups/lib/services/: cups-config
cups/lib/update/: 05cups
extra/thunderbird/lib/post-session/: 30thunderbird
firefox/lib/post-session/: 30firefox
firefox/lib/pre-session/: 70firefox
firefox/lib/update/: 20firefox
firewall/lib/update/: 04firewall
install/: apt-repositories  install-list  install.list  isolinux.cfg  remove-list  sources.list
lightdm/config/: lightdm-kde-greeter.conf  lightdm.conf
lightdm/themes/karoshi-classic/: main.qml
linuxclientsetup/scripts/: client-config  create_karoshi_client
linuxclientsetup/utilities/: karoshi-update.conf  set-network  setup
multimedia/autostart/: detect-dvd.desktop
offline/lib/pam/: offline-homes
offline/lib/post-session/: 05offline
offline/lib/pre-session/: 05offline
offline/lib/update/: 01offline
shutdown/lib/services/: idle-shutdown
shutdown/lib/update/: 05shutdown
src/applications/: change-admin-password.desktop  set-location.desktop
src/config.external/ssh/: sshd_config
src/core/: Makefile.am
src/core/applications/: Makefile.am
src/core/config/: Makefile.am
src/core/config.external/ssh/: ssh_config
src/core/data/: Makefile.am  new-offline-user.desktop  online-merge.desktop
src/core/icons/: Makefile.am
src/core/lib/: Makefile.am  common  session-tools.in
src/core/lib/pam/: offline-homes.in  post-session.in  pre-session.in  virtualbox-mkdir.in  wrapper.in
src/core/lib/post-session/: 05offline.in  50configuration.in
src/core/lib/pre-session/: 00core.in
src/core/lib/services/: idle-shutdown.in  multicast-listener.in  update.in
src/core/lib/update/: 00core.in  01offline.in
src/cups/: Makefile.am
src/cups/backend/: Makefile.am
src/cups/lib/: Makefile.am
src/cups/lib/services/: cups-config.in
src/cups/lib/update/: 05cups.in
src/cups/sudoers.d/: Makefile.am
src/firefox/lib/: Makefile.am
src/firefox/lib/pre-session/: 70firefox.in
src/firefox/lib/update/: 20firefox.in
src/firewall/lib/: Makefile.am
src/lib/pre-session/: 50configuration
src/lib/services/: multicast-listener
src/lightdm/: Makefile.am
src/lightdm/config/: Makefile.am
src/lightdm/themes/: Makefile.am
src/offline/lib/post-session/: 05offline
src/thunderbird/: Makefile.am
src/thunderbird/extensions/: Makefile.am
src/thunderbird/lib/: Makefile.am
src/thunderbird/lib/pre-session/: 70thunderbird  70thunderbird.in
src/thunderbird/lib/update/: 21thunderbird.in
src/xfce4/: Makefile.am
src/xfce4/applications/: Makefile.am  printing.desktop
src/xfce4/data/: Makefile.am
src/xfce4/gvfs/: Makefile.am
src/xfce4/lib/: Makefile.am
src/xfce4/lib/pre-session/: 55xfce4.in
src/xfce4/xdg/: Makefile.am
src/xfce4/xdg/xfce4/xfconf/xfce-perchannel-xml/: xfce4-session.xml
thunderbird/lib/post-session/: 30thunderbird
thunderbird/lib/pre-session/: 70thunderbird
thunderbird/lib/update/: 21thunderbird
xfce4/lib/pre-session/: 55xfce4
xfce4/themes/KaroshiClearlooks/: README  index.theme
xfce4/xdg/autostart/: detect-dvd.desktop
