# Copyright (C) 2014 Robin McCorkell

#This file is part of Karoshi Client.
#
#Karoshi Client is free software: you can redistribute it and/or modify
#it under the terms of the GNU Affero General Public License as published by
#the Free Software Foundation, either version 3 of the License, or
#(at your option) any later version.
#
#Karoshi Client is distributed in the hope that it will be useful,
#but WITHOUT ANY WARRANTY; without even the implied warranty of
#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#GNU Affero General Public License for more details.
#
#You should have received a copy of the GNU Affero General Public License
#along with Karoshi Client.  If not, see <http://www.gnu.org/licenses/>.

# Initialise autoconf
AC_INIT([Karoshi Client], [4.0], [rmccorkell@karoshi.org.uk], [karoshi-client], [http://karoshi.org.uk/])
AC_PREREQ([2.61])

# Configuration
AC_CONFIG_SRCDIR([src/core/lib/services/update])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])

# Initialise automake and libtool
AM_INIT_AUTOMAKE([subdir-objects])

AC_PROG_INSTALL
AC_PROG_MKDIR_P

AC_OUTPUT

