thunderbirdextensiondir = /usr/lib/mozilla/extensions/{3550f703-e582-4d05-9a08-453d09bdfdc6}

EXTRA_DIST = firetray-0.4.6.xpi

install-data-hook:
	mkdir "$(thunderbirdextensiondir)/{9533f794-00b4-4354-aa15-c2bbda6989f8}"
	unzip -q firetray-0.4.6.xpi -d "$(thunderbirdextensiondir)/{9533f794-00b4-4354-aa15-c2bbda6989f8}"
