xdgdir = $(sysconfdir)/xdg
nobase_dist_xdg_DATA = Terminal/terminalrc Thunar/uca.xml xfce4/helpers.rc \
  xfce4/xfconf/xfce-perchannel-xml/xfce4-panel.xml xfce4/xfconf/xfce-perchannel-xml/thunar-volman.xml \
  xfce4/xfconf/xfce-perchannel-xml/xfce4-desktop.xml xfce4/xfconf/xfce-perchannel-xml/xfce4-session.xml \
  xfce4/xfconf/xfce-perchannel-xml/xfce4-keyboard-shortcuts.xml xfce4/xfconf/xfce-perchannel-xml/xsettings.xml \
  xfce4/xfconf/xfce-perchannel-xml/xfce4-notifyd.xml xfce4/xfconf/xfce-perchannel-xml/thunar.xml \
  xfce4/xfconf/xfce-perchannel-xml/xfwm4.xml xfce4/xfconf/xfce-perchannel-xml/xfce4-power-manager.xml \
  xfce4/panel/datetime-7.rc xfce4/panel/default.xml \
  user-dirs.conf autostart/detect-dvd.desktop menus/xfce-applications.menu
